--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.31.0"
 typer = "^0.9.0"
 slack-sdk = "^3.21.3"
 tenacity = "^8.2.2"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.2.0"
