--- a/etc/config.local.yaml
+++ b/etc/config.local.yaml
@@ -7,7 +7,7 @@ web3signer_url: ~
 default_fee_recipient: ~
 slack_channel: ~
 slack_token: ~
-relay_url: ~
+relays: ~
 liveness_file: ~
 
 watched_keys:
