--- a/tests/config/assets/config.empty.yaml
+++ b/tests/config/assets/config.empty.yaml
@@ -5,6 +5,6 @@ web3signer_url: ~
 default_fee_recipient: ~
 slack_channel: ~
 slack_token: ~
-relay_url: ~
+relays: ~
 liveness_file: ~
 watched_keys: ~
