--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ typer = "^0.9.0"
 slack-sdk = "^3.21.3"
 tenacity = "^8.2.2"
 pyyaml = "^6.0.1"
+pydantic-yaml = "^1.2.0"
+pydantic-settings = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.2.0"
