--- a/tests/config/assets/config.yaml
+++ b/tests/config/assets/config.yaml
@@ -2,6 +2,7 @@
 
 beacon_url: http://localhost:5051/
 beacon_type: other
+beacon_timeout_sec: 90
 execution_url: http://localhost:8545/
 web3signer_url: http://web3signer:9000/
 default_fee_recipient: '0x41bF25fC8C52d292bD66D3BCEcd8a919ecB9EF88'
